--- a/mainstlye.css
+++ b/mainstlye.css
@@ -4,28 +4,64 @@
   --waterfall: #68829e;
   --moss: #aebd38;
   --meadow: #598234;
+  --light-background: #f2f6fa;
 }
 
 body {
   margin: 0;
+  background-color: var(--light-background);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+h1 {
+  background-color: var(--meadow);
+  color: rgb(228, 255, 110);
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 1em 0;
 }
 
 nav.mainlinks {
   background: var(--thunder-cloud);
-  padding: 0.5em;
-  font-family: sans-serif;
+  padding: 0.5em 0;
   line-height: 1.5;
   position: sticky;
   top: 0;
 }
 
+.mainheading {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--meadow);
+}
+
+.pagetitle {
+  margin: 0;
+  padding-top: 0.3em;
+  font-size: 1.7em;
+  font-style: italic;
+}
+
+.maincontent {
+  margin: 0 auto;
+  display: block;
+  max-width: 500px;
+  background-color: white;
+}
+
+.maincontent h2,
+.maincontent p {
+  padding-inline-start: 0.2em;
+}
+
 nav.mainlinks ul {
   padding: 0;
+  background: var(--thunder-cloud);
   margin: 0 auto;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: start;
 }
 
 nav.mainlinks ul li {
@@ -33,7 +69,7 @@ nav.mainlinks ul li {
 }
 
 nav.mainlinks li a {
-  padding: 0 0.5em;
+  padding-right: 0.5em;
   text-decoration: none;
   color: white;
   font-size: 1em;
@@ -48,5 +84,17 @@ nav.mainlinks li a:active {
   color: var(--waterfall);
 }
 
-@media (min-width: 675px) {
+@media (min-width: 576px) {
+  .maincontent {
+    max-width: 40em;
+  }
+}
+
+@media (min-width: 768px) {
+}
+
+@media (min-width: 992px) {
+  .maincontent {
+    max-width: 60em;
+  }
 }
