--- a/movieServer/views/movieList.ejs
+++ b/movieServer/views/movieList.ejs
@@ -13,103 +13,51 @@
 </head>
 
 <body>
-    <div class="mainheading">
-        <header>
-            <h1>Box Office Database</h1>
-        </header>
+  <div class="mainheading">
+    <header>
+        <h1>Box Office Database</h1>
+    </header>
 
-        <nav class="mainlinks">
-            <div class="maincontent">
-                <ul>
-                    <li>
-                        <a title="Home page" href="../index.html">Home</a>
-                    </li>
-                    <li>
-                        <a title="Movie home page" href="#">Movies</a>
-                    </li>
-                    <li>
-                        <a title="User's Data Page" href="UserData.html">User data</a>
-                    </li>
-                    <li>
-                        <a title="Actors home page" href="Actors.html">Actors</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+    <nav class="mainlinks">
+      <div class="maincontent">
+        <ul>
+          <li>
+            <a title="Home page" href="/index.html">Home</a>
+          </li>
+          <li>
+            <a title="Movie home page" href="#">Movies</a>
+          </li>
+          <li>
+            <a title="User's Data Page" href="/UserData">User data</a>
+          </li>
+          <li>
+            <a title="Actors home page" href="/Actors">Actors</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+
+  <main class="maincontent">
+    <!-- <header><h2 class="pagetitle">Movie Database</h2></header> -->
+    <header>
+      <h2 class="pagetitle">
+        List of all movies
+      </h2>
+    </header>
+
+    <hr>
+
+    <% if(genres.length > 0 ) { %> 
+    <div class="inlinelist">
+        <ul>
+        <% for(let movie of movies) { _%> 
+        <li><a href="<%- movie.url %> "><%- movie.title %></a></li>
+        <% } %> 
+        </ul>
     </div>
+    <% } %> 
 
-    <main class="maincontent">
-        <!-- <header><h2 class="pagetitle">Movie Database</h2></header> -->
-        <header>
-            <h2 class="pagetitle">Movie List</h2>
-        </header>
-        <!-- <img src="Sprited Away.jpg" alt="Poster for the movie Spirited Away with the main character looking towards the veiwer" class="movieimg" />
+</main>
 
-        <article>
-            <p>Director: Hayao Miyazaki</p>
-
-            <p>Cast:</p>
-            <table>
-                <thead>
-                    <th>Actor/Actress</th>
-                    <th>Character</th>
-                </thead>
-
-                <tbody>
-                    <tr>
-                        <td><a href="#">Rumi Hiiragi</a></td>
-                        <td>Chihiro Ogino / Sen</td>
-                    </tr>
-
-                    <tr>
-                        <td><a href="#">Miyu Irino</a></td>
-                        <td>Haku</td>
-                    </tr>
-
-                    <tr>
-                        <td><a href="#">Mari Natsuki</a></td>
-                        <td>Yubaba / Zeniba</td>
-                    </tr>
-
-                    <tr>
-                        <td><a href="#">Takashi Naitô</a></td>
-                        <td>Akio Ogino</td>
-                    </tr>
-
-                    <tr>
-                        <td><a href="#">Yasuko Sawaguchi</a></td>
-                        <td>Yûko Ogino</td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <p>Release Date: <time datetime="2001">2001</time></p>
-            <p>Motion Picture Rating: PG</p>
-            <div class="inlinelist">
-                <p>Genres:</p>
-                <ul>
-                    <li><a href="#">Animation</a></li>
-                    <li><a href="#">Adventure</a></li>
-                    <li><a href="#">Family</a></li>
-                    <li><a href="#">Fantasy</a></li>
-                    <li><a href="#">Mystery</a></li>
-                </ul>
-            </div>
-
-            <p>Country: Japan</p>
-            <p>Language: Japanese</p>
-            <p>Duration: <time datetime="2h 5m">2h 5min</time></p>
-        </article> -->
-    </main>
-
-    <footer>
-        <p>Page by JMM</p>
-        <p>
-            © <time datetime="2021-4-26">April 2021</time> <br /> BoxOffice.com
-        </p>
-    </footer>
-</body>
-
-<!-- Data type is movies can also include show as well and quantify by having type: movie or show-->
-
-</html>
+<%- include("common-footer.ejs") %> 
