--- a/movieServer/public/stylesheets/moviestyle.css
+++ b/movieServer/public/stylesheets/moviestyle.css
@@ -12,6 +12,13 @@ table th {
   border: 2px solid black;
 }
 
+.movieDisplay li {
+  list-style: none;
+  font-size: 1.2em;
+  font-weight: 300;
+  padding-bottom: 0.4em;
+}
+
 .movieimg {
   padding-top: 1em;
   height: 100%;
