--- a/movieServer/views/userMulti.ejs
+++ b/movieServer/views/userMulti.ejs
@@ -1,8 +1,68 @@
-<%- include("header.ejs") %>
+<!DOCTYPE html>
+<html lang="en-US">
 
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Insert title of page below -->
 
-    <body>
+    <!--Bootstrap link-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
 
+    <!-- END SHARED -->
+    <title>
+        User List
+    </title>
+    <link rel="stylesheet" href="../../../../stylesheets/mainstlye.css" />
+</head>
 
-    </body>
+<body>
+    <div class="mainheading">
+        <header>
+            <h1>
+                Box Office Database
+            </h1>
+        </header>
+
+        <nav class="mainlinks">
+            <div class="maincontent">
+                <ul>
+                    <li><a title="Home page" href="../../../index.html">Home</a></li>
+                    <li>
+                        <a title="Movie home page" href="../Movies.html">Movies</a>
+                    </li>
+                    <li>
+                        <a title="User's Data Page" href="../UserData.html">User data</a>
+                    </li>
+                    <li>
+                        <a title="Actors home page" href="../Actors.html">Actors</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <div class="maincontent">
+        <h2>User List</h2>
+        <p>Here are all the users that currently use this site. Click a name to learn more.</p>
+        <ul>
+            <%for(let i = 0; i < userList.length; i++) { %>
+                <li>
+                    <a href="./users/<%-userList[i]._id%>">
+                        <%-userList[i].userName%>
+                    </a>
+                </li>
+                <%}%>
+        </ul>
+
+    </div>
+    <footer style="margin-top: 5%">
+        <div>
+            <span style="font-size: 1.5em">Page by JMM</span>
+            <p>
+                © <time datetime="2021-4-26">April 2021</time> <br /> BoxOffice.com
+            </p>
+        </div>
+    </footer>
+</body>
+
+</html>
