--- a/movieServer/views/userSingle.ejs
+++ b/movieServer/views/userSingle.ejs
@@ -8,69 +8,99 @@
 
     <!--Bootstrap link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../public/stylesheets/mainstlye.css" />
+
     <!-- END SHARED -->
     <title>
-        <%- user.userName</title>
-    <link rel="stylesheet" href="../public/stylesheets/individualUserStyle.css"/>
+        <%- user.userName%>
+    </title>
+    <link rel="stylesheet" href="../../../../../stylesheets/individualUserStyle.css" />
+    <link rel="stylesheet" href="../../../../../stylesheets/mainstlye.css" />
 </head>
 
 <body>
     <div class="mainheading">
         <header>
-            <h1><%-user.userName %>
+            <h1>
+                Box Office Database
             </h1>
-            </header>
+        </header>
 
-            <nav class="mainlinks">
-                <div class="maincontent">
-                    <ul>
-                        <li><a title="Home page" href="../index.html">Home</a></li>
-                        <li>
-                            <a title="Movie home page" href="Movies.html">Movies</a>
-                        </li>
-                        <li>
-                            <a title="User's Data Page" href="UserData.html">User data</a>
-                        </li>
-                        <li>
-                            <a title="Actors home page" href="Actors.html">Actors</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            </div>
+        <nav class="mainlinks">
             <div class="maincontent">
                 <ul>
+                    <li><a title="Home page" href="../../../index.html">Home</a></li>
                     <li>
-                        <p>User Name:
-                            <%- user.userName %>
-                        </p>
+                        <a title="Movie home page" href="../../Movies.html">Movies</a>
                     </li>
                     <li>
-                        <p>Password:
-                            <%- user.passWord %>
-                        </p>
+                        <a title="User's Data Page" href="../../UserData.html">User data</a>
                     </li>
                     <li>
-                        <p>Date Created:
-                            <%- user.dateCreated %>
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            <%- user.userName %>'s
-                                <a href="<%- teamList[i].url %>/favoritemovies">Favorite Movies</a>
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            <%- user.userName %>'s
-                                <a href="<%- teamList[i].url %>/favoriteactors">Favorite Actors</a>
-                        </p>
+                        <a title="Actors home page" href="../../Actors.html">Actors</a>
                     </li>
                 </ul>
             </div>
+        </nav>
+    </div>
+    <div class="maincontent">
+        <h2>
+            <%- user.userName %>
+        </h2>
+        <ul class="userInfo">
+            <li>
+                <p>User Name:
+                    <%- user.userName %>
+                </p>
+            </li>
+            <li>
+                <p>Password:
+                    <%- user.passWord %>
+                </p>
+            </li>
+            <li>
+                <p>Date Created:
+                    <%- user.dateCreated %>
+                </p>
+            </li>
 
-            </body>
+
+
+            <li>
+                <p>This person likes the following movies: </p>
+                <ul>
+                    <%for(let i = 0; i < moviesList.length; i++){%>
+                        <li>
+                            <a href="<%-moviesList[i].url%>">
+                                <%-moviesList[i].title%>
+                            </a>
+                        </li>
+                        <%}%>
+                </ul>
+            </li>
+            <li>
+                <p>They also like these actors: </p>
+                <ul>
+                    <%for(let j = 0; j < actorsList.length; j++){%>
+                        <li>
+                            <a href="<%-actorsList[j].url%>">
+                                <%-actorsList[j].name%>
+                            </a>
+                        </li>
+                        <%}%>
+                </ul>
+            </li>
+        </ul>
+        <a class="text-center" href="../users">Go back to the main list</a>
+    </div>
+
+    <footer style="margin-top: 5%">
+        <div>
+            <span style="font-size: 1.5em">Page by JMM</span>
+            <p>
+                © <time datetime="2021-4-26">April 2021</time> <br /> BoxOffice.com
+            </p>
+        </div>
+    </footer>
+</body>
 
 </html>
