--- a/movieServer/public/stylesheets/ActorsStyle.css
+++ b/movieServer/public/stylesheets/ActorsStyle.css
@@ -22,6 +22,14 @@ article ul li {
   font-size: 1.2em;
 }
 
+.mainactorcontent{
+  margin-top: .5rem;
+}
+
+h2{
+  font-size: x-large;
+}
+
 p {
   font-size: 1.1em;
 }
