--- a/movieServer/views/actor.ejs
+++ b/movieServer/views/actor.ejs
@@ -1,21 +1,9 @@
-<!DOCTYPE html>
-<html lang="en-US">
-
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Insert title of page below -->
-    <title>
-        <%- actor.name %>
-    </title>
-
-    <!--Bootstrap link-->
+<%- include("shared-single-header.ejs", {title: name}) %> 
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../public/stylesheets/mainstlye.css" />
-    <link rel="stylesheet" href="../public/stylesheets/individualUserStyle.css" />
-    <!-- END SHARED -->
+    <link rel="stylesheet" href="../../stylesheets/ActorsStyle.css" />
 </head>
-
+    
 <body>
     <div class="mainheading">
         <header>
@@ -25,15 +13,15 @@
         <nav class="mainlinks">
             <div class="maincontent">
                 <ul>
-                    <li><a title="Home page" href="../index.html">Home</a></li>
+                    <li><a title="Home page" href="/index.html">Home</a></li>
                     <li>
-                        <a title="Movie home page" href="Movies.html">Movies</a>
+                        <a title="Movie home page" href="/movies">Movies</a>
                     </li>
                     <li>
-                        <a title="User's Data Page" href="UserData.html">User data</a>
+                        <a title="User's Data Page" href="/UserData">User data</a>
                     </li>
                     <li>
-                        <a title="Actors home page" href="#">Actors</a>
+                        <a title="Actors home page" href="/actors">Actors</a>
                     </li>
                 </ul>
             </div>
@@ -43,20 +31,21 @@
     <div class="maincontent">
         <ul>
             <p>Name:
-                <%- actor.name %>
+                <%- name %>
             </p>
+            <!-- Going to implement image -->
             <p>Born:
-                <%- actor.born %>
+                <%- born %>
             </p>
             <p>Height:
-                <%- actor.height %>
+                <%- height %> ft
             </p>
             <p>Twitter account:
-                <%- actor.twitter %>
+                <a title="Twitter account" href=<%= twitter %>> <%- twitter %></a>
             </p>
             <p>Movies starred in: </p>
             <ul>
-                <% for (let m of actor.movies) { %>
+                <% for (let m of movies) { %>
                     <li>
                         <%- m %>
                     </li>
@@ -68,7 +57,7 @@
     <footer>
         <p>Page by JMM</p>
         <p>
-            © <time datetime="2021-4-26">April 2021</time> <br /> BoxOffice.com
+            © <time datetime="2021-5-26">May 2021</time> <br /> BoxOffice.com
         </p>
     </footer>
   </body>
