--- a/movieServer/views/actorList.ejs
+++ b/movieServer/views/actorList.ejs
@@ -1,55 +1,54 @@
-<!DOCTYPE html>
-<html lang="en-US">
+<%- include("shared-header.ejs", {title: "List of actors"}) %> 
     
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <!-- Insert title of page below -->
-        <title>
-            <%- actor.name %>
-        </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../stylesheets/ActorsStyle.css" />
+</head>
     
-        <!--Bootstrap link-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
-        <link rel="stylesheet" href="../public/stylesheets/mainstlye.css" />
-        <link rel="stylesheet" href="../public/stylesheets/individualUserStyle.css" />
-        <!-- END SHARED -->
-    </head>
-    
-    <body>
-        <div class="mainheading">
-            <header>
-                <h1>Box Office Database</h1>
-            </header>
-    
-            <nav class="mainlinks">
-                <div class="maincontent">
-                    <ul>
-                        <li><a title="Home page" href="../index.html">Home</a></li>
-                        <li>
-                            <a title="Movie home page" href="Movies.html">Movies</a>
-                        </li>
-                        <li>
-                            <a title="User's Data Page" href="UserData.html">User data</a>
-                        </li>
-                        <li>
-                            <a title="Actors home page" href="#">Actors</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    
-        <div class="maincontent">
-          <h1>List of Actors in database</h1>
-        </div>
-    
-        <footer>
-            <p>Page by JMM</p>
-            <p>
-                © <time datetime="2021-4-26">April 2021</time> <br /> BoxOffice.com
-            </p>
-        </footer>
-  </body>
+
+<body>
+    <div class="mainheading">
+        <header>
+            <h1>Box Office Database</h1>
+        </header>
+
+        <nav class="mainlinks">
+            <div class="maincontent">
+                <ul>
+                    <li><a title="Home page" href="../index.html">Home</a></li>
+                    <li>
+                        <a title="Movie home page" href="/movies">Movies</a>
+                    </li>
+                    <li>
+                        <a title="User's Data Page" href="/UserData">User data</a>
+                    </li>
+                    <li>
+                        <a title="Actors home page" href="/actors">Actors</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+
+    <div class="maincontent">
+      <h2>List of Actors in database</h2>
+
+      <ul>
+        <% for (let a of actorList) { %>
+          <li><a href="<%- a.url %>"><%- a.name %></a></li>
+        <% } %>
+        </ul>
+
+
+
+    </div>
+
+    <footer>
+        <p>Page by JMM</p>
+        <p>
+            © <time datetime="2021-5-26">April 2021</time> <br /> BoxOffice.com
+        </p>
+    </footer>
+</body>
 </html>
+
 
