--- a/movieServer/views/actors.ejs
+++ b/movieServer/views/actors.ejs
@@ -1,19 +1,7 @@
-<!DOCTYPE html>
-<html lang="en-US">
-
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Insert title of page below -->
-    <title>
-        <%- actor.name %>
-    </title>
-
-    <!--Bootstrap link-->
+<%- include("shared-header.ejs", {title: "List of actors"}) %> 
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../public/stylesheets/mainstlye.css" />
-    <link rel="stylesheet" href="../public/stylesheets/individualUserStyle.css" />
-    <!-- END SHARED -->
+    <link rel="stylesheet" href="../stylesheets/ActorsStyle.css" />
 </head>
 
 <body>
