--- a/movieServer/views/actorList.ejs
+++ b/movieServer/views/actorList.ejs
@@ -19,7 +19,7 @@
                         <a title="Movie home page" href="/movies">Movies</a>
                     </li>
                     <li>
-                        <a title="User's Data Page" href="/UserData">User data</a>
+                        <a title="User's Data Page" href="/DataTypePages/UserData.html">User data</a>
                     </li>
                     <li>
                         <a title="Actors home page" href="/actors">Actors</a>
