--- a/movieServer/views/actors.ejs
+++ b/movieServer/views/actors.ejs
@@ -18,7 +18,7 @@
                         <a title="Movie home page" href="Movies.html">Movies</a>
                     </li>
                     <li>
-                        <a title="User's Data Page" href="UserData.html">User data</a>
+                        <a title="User's Data Page" href="/DataTypePages/UserData.html">User data</a>
                     </li>
                     <li>
                         <a title="Actors home page" href="Actors.html">Actors</a>
