--- a/movieServer/views/movie.ejs
+++ b/movieServer/views/movie.ejs
@@ -29,7 +29,7 @@
             <a title="Movie home page" href="/movies">Movies</a>
           </li>
           <li>
-            <a title="User's Data Page" href="/UserData">User data</a>
+            <a title="User's Data Page" href="/DataTypePages/UserData.html">User data</a>
           </li>
           <li>
             <a title="Actors home page" href="/Actors">Actors</a>
