--- a/movieServer/views/actorList.ejs
+++ b/movieServer/views/actorList.ejs
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a title="Home page" href="../index.html">Home</a></li>
                     <li>
-                        <a title="Movie home page" href="/movies">Movies</a>
+                        <a title="Movie home page" href="/movies/">Movies</a>
                     </li>
                     <li>
                         <a title="User's Data Page" href="/DataTypePages/UserData.html">User data</a>
@@ -38,7 +38,7 @@
         <% } %>
         </ul>
 
-
+        <a href="/create/">Create a new actor</a>
 
     </div>
 
