--- a/movieServer/views/movie.ejs
+++ b/movieServer/views/movie.ejs
@@ -64,7 +64,7 @@
             <tbody>
               <% for(let actor of cast) { %> 
                 <tr>
-                    <td><a href="#"><%- actor %> </a></td>
+                    <td><a href="<%- actor.url %> "><%- actor.name %> </a></td>
                     <!-- <td>Chihiro Ogino / Sen</td> -->
                 </tr>
               <% } _%> 
