--- a/movieServer/public/stylesheets/individualUserStyle.css
+++ b/movieServer/public/stylesheets/individualUserStyle.css
@@ -1,17 +1,37 @@
 li {
-    list-style-type: none;
-    margin-top: 1%;
+  list-style-type: none;
+  margin-top: 1%;
 }
 
 ul {
-    margin-top: 1%;
+  margin-top: 1%;
 }
 
 .userInfo {
-    margin-top: 3%;
+  margin-top: 3%;
 }
 
 h2 {
-    display: block;
-    text-align: center;
+  display: block;
+  text-align: center;
+}
+
+.formInput {
+  margin-left: 2%;
+}
+
+.formDesc {
+  margin-left: 1%;
+}
+
+.formSection {
+  margin-top: 2%;
+}
+
+.formButton {
+  margin-top: 5%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2%;
 }
