--- a/movieServer/views/userSingle.ejs
+++ b/movieServer/views/userSingle.ejs
@@ -18,89 +18,57 @@
 </head>
 
 <body>
-    <div class="mainheading">
-        <header>
-            <h1>
-                Box Office Database
-            </h1>
-        </header>
+  <div class="mainheading">
+    <header>
+      <h1>
+        Box Office Database
+      </h1>
+    </header>
 
-        <nav class="mainlinks">
-            <div class="maincontent">
-                <ul>
-                    <li><a title="Home page" href="../../../index.html">Home</a></li>
-                    <li>
-                        <a title="Movie home page" href="../../Movies.html">Movies</a>
-                    </li>
-                    <li>
-                        <a title="User's Data Page" href="../../UserData.html">User data</a>
-                    </li>
-                    <li>
-                        <a title="Actors home page" href="../../Actors.html">Actors</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-    <div class="maincontent">
-        <h2>
-            <%- user.userName %>
-        </h2>
-        <ul class="userInfo">
-            <li>
-                <p>User Name:
-                    <%- user.userName %>
-                </p>
-            </li>
-            <li>
-                <p>Password:
-                    <%- user.passWord %>
-                </p>
-            </li>
-            <li>
-                <p>Date Created:
-                    <%- user.dateCreated %>
-                </p>
-            </li>
-
-
-
-            <li>
-                <p>This person likes the following movies: </p>
-                <ul>
-                    <%for(let i = 0; i < moviesList.length; i++){%>
-                        <li>
-                            <a href="<%-moviesList[i].url%>">
-                                <%-moviesList[i].title%>
-                            </a>
-                        </li>
-                        <%}%>
-                </ul>
-            </li>
-            <li>
-                <p>They also like these actors: </p>
-                <ul>
-                    <%for(let j = 0; j < actorsList.length; j++){%>
-                        <li>
-                            <a href="<%-actorsList[j].url%>">
-                                <%-actorsList[j].name%>
-                            </a>
-                        </li>
-                        <%}%>
-                </ul>
-            </li>
-        </ul>
-        <a class="text-center" href="../users">Go back to the main list</a>
-    </div>
-
-    <footer style="margin-top: 5%">
-        <div>
-            <span style="font-size: 1.5em">Page by JMM</span>
-            <p>
-                © <time datetime="2021-4-26">April 2021</time> <br /> BoxOffice.com
-            </p>
+    <nav class="mainlinks">
+        <div class="maincontent">
+            <ul>
+              <li><a title="Home page" href="../../../index.html">Home</a></li>
+              <li><a title="Movie home page" href="/movies/">Movies</a></li>
+              <li><a title="User's Data Page" href="../../UserData.html">User data</a></li>
+              <li><a title="Actors home page" href="../../../actors">Actors</a></li>
+            </ul>
         </div>
-    </footer>
+    </nav>
+  </div>
+
+  <div class="maincontent">
+    <h2>
+      <%- user.userName %>
+    </h2>
+    <ul class="userInfo">
+      <li><p>User Name:<%- user.userName %></p></li>
+      <li><p>Password:<%- user.passWord %></p></li>
+      <li><p>Date Created:<%- user.dateCreated %></p></li>
+      <li><p>This person likes the following movies: </p>
+        <ul>
+          <%for(let i = 0; i < moviesList.length; i++){%>
+          <li><a href="<%-moviesList[i].url%>"><%-moviesList[i].title%></a></li>
+          <%}%>
+        </ul>
+      </li>
+      <li><p>They also like these actors: </p>
+        <ul>
+          <%for(let j = 0; j < actorsList.length; j++){%>
+          <li><a href="<%-actorsList[j].url%>"><%-actorsList[j].name%></a></li>
+          <%}%>
+        </ul>
+      </li>
+    </ul>
+      <a class="text-center" href="../users">Go back to the main list</a>
+  </div>
+
+  <footer style="margin-top: 5%">
+    <div>
+      <span style="font-size: 1.5em">Page by JMM</span>
+        <p>© <time datetime="2021-4-26">April 2021</time> <br /> BoxOffice.com</p>
+    </div>
+  </footer>
 </body>
 
 </html>
