--- a/movieServer/views/movieList.ejs
+++ b/movieServer/views/movieList.ejs
@@ -32,10 +32,22 @@
   <main class="maincontent">
     <!-- <header><h2 class="pagetitle">Movie Database</h2></header> -->
     <header>
-      <h2 class="pagetitle">
-        List of all movies
-      </h2>
+      <h2 class="pagetitle">List of all movies</h2>
     </header>
+    <!-- need to make these side by side -->
+    <p><a href="genres">All Movie Genres</a></p>
+
+    <section>
+      <p>Find Specific moive or movies that share a genre</p>
+      <label for="inputField">Movie Name:</label>
+      <input type="text" id="inputField" />
+      <button id="loadData">Search</button>
+    </section>
+
+    <section class="movieMatch"></section>
+
+    
+    <!-- <h3><em>(build ajax filtering data/sort for this page)</em></h3> -->
 
     <% if(movies.length > 0 ) { %> 
     <ul class="movieDisplay">
@@ -48,4 +60,5 @@
     <p><a href="create">create new movie</a></p>
 </main>
 
+  <script type="text/javascript" src="../javascripts/movie-genre-search.js"></script>
 <%- include("common-footer.ejs") %> 
