--- a/movieServer/public/stylesheets/moviestyle.css
+++ b/movieServer/public/stylesheets/moviestyle.css
@@ -26,11 +26,77 @@ table th {
   object-fit: contain;
 }
 
+ul.castList {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+li.castMember {
+  padding: 0.2em 0.2em;
+  margin: 0.1em;
+  /* border: 2px solid black; */
+  /* border-radius: 0.2em; */
+}
+
+button {
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  /* background-color: transparent; */
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  background: cornflowerblue;
+}
+
+button:hover {
+  background-color: teal;
+}
+
 tr,
 td {
   border: 2px solid black;
   padding: 1em;
 }
+
+.formTitle {
+  margin: 0 auto;
+  text-align: center;
+  padding-bottom: 0.2em;
+  background: white;
+}
+
+.error {
+  color: #842029;
+  background-color: #f8d7da;
+  border-color: #f5c2c7;
+  position: relative;
+  padding: 1rem 1rem;
+  /* margin-bottom: 1rem; */
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+}
+
+div.error + form#movieForm {
+  padding-top: 1em;
+}
+
+/* label {
+  padding-inline-start: 1em;
+} */
 
 .inlinelist {
   display: flex;
@@ -47,18 +113,39 @@ td {
   padding-inline-start: 1em;
 }
 
+p.rating {
+  margin-bottom: 0;
+}
+
+.inlinelist + p {
+  margin-top: 0;
+}
+
 @media (min-width: 450px) {
   .movieimg {
     height: fit-content;
     width: auto;
   }
 }
+
+@media (min-width: 576px) {
+  .formTitle {
+    max-width: 40em;
+  }
+  label {
+    padding-inline-start: 1em;
+  }
+}
+
 @media (min-width: 992px) {
   .movieimg {
     float: left;
     padding: 0.5em;
     overflow: auto;
-    width: 15em;
+    width: 14em;
     height: auto;
+  }
+  .formTitle {
+    max-width: 60em;
   }
 }
