Updated user data script

--- a/movieServer/public/stylesheets/UserDataStyle.css
+++ b/movieServer/public/stylesheets/UserDataStyle.css
@@ -21,6 +21,10 @@ h2 {
     margin-right: 40%;
 }
 
+.formButton {
+    margin-bottom: 2%;
+}
+
 @media (min-width: 800px) {
     button {
         margin-left: 45%;
