--- a/movieServer/views/actorList.ejs
+++ b/movieServer/views/actorList.ejs
@@ -43,9 +43,8 @@
     </div>
 
     <footer>
-        <p>Page by JMM</p>
-        <p>
-            © <time datetime="2021-5-26">April 2021</time> <br /> BoxOffice.com
+        <p>Page by JMM <br>
+            © <time datetime="2021-5-26">May 2021</time> <br /> BoxOffice.com
         </p>
     </footer>
 </body>
