--- a/movieServer/views/actor.ejs
+++ b/movieServer/views/actor.ejs
@@ -1,4 +1,4 @@
-<%- include("shared-single-header.ejs", {title: name}) %> 
+<%- include("shared-header.ejs", {title: name}) %> 
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
     <link rel="stylesheet" href="../../stylesheets/mainstlye.css" />
@@ -34,7 +34,10 @@
             <p>Name:
                 <%- name %>
             </p>
-            <!-- Going to implement image -->
+            <p>Image of them:</p>
+            <p>
+                <img src=<%= image %>  alt="Image of actor" style="width: 10em; height: auto;"/>
+            </p>
             <p>Born:
                 <%- bornDate %>
             </p>
@@ -42,30 +45,41 @@
                 <%- height %> ft
             </p>
             <p>Twitter account:
-                <a title="Twitter account" href=<%= twitterAccount %>> <%- twitterAccount %></a>
+                <% if(twitter == null || twitter == "") { %> 
+                    No twitter account :(
+                <% } else { _%>
+                    <a title="Twitter account" href=<%= twitterAccount %>> <%- twitterAccount %></a>
+                <% } _%>  
+
+
             </p>
             <p>Movies starred in: </p>
             <ul class="movielist">
+                <% if(movies.length == 0) { %> 
+                    <p>No movie starred in :{</p>
+                <% } else { _%>
                 <% for (let m of movies) { %>
+                    <% console.log(movies) %> 
+
                     <li>
                         <a href="<%- m.url %> "><%- m.title %></a>
                     </li>
                     <% } %>
+                    <% } _%>  
             </ul>
         </ul>
 
         <hr>
     
         <ul class="list-unstyled">
-          <li><a href="/actors/update/<%- _id %>">Update current student</a></li>
-          <li><a href="/actors/delete/<%- _id %>">Delete student from database</a></li>
+          <li><a href="/actors/update/<%- _id %>">Update current actor</a></li>
+          <li><a href="/actors/delete/<%- _id %>">Delete actor from database</a></li>
         </ul>
 
     </div>
 
     <footer>
-        <p>Page by JMM</p>
-        <p>
+        <p>Page by JMM <br>
             © <time datetime="2021-5-26">May 2021</time> <br /> BoxOffice.com
         </p>
     </footer>
