--- a/movieServer/views/movieList.ejs
+++ b/movieServer/views/movieList.ejs
@@ -36,15 +36,16 @@
     </header>
     <!-- need to make these side by side -->
     <p><a href="genres">All Movie Genres</a></p>
-
+<!-- 
     <section>
       <p>Find Specific moive or movies that share a genre</p>
       <label for="inputField">Movie Name:</label>
       <input type="text" id="inputField" />
+      <input type="hidden" id="listOfMovies" value="<%-// movies %>" />
       <button id="loadData">Search</button>
     </section>
 
-    <section class="movieMatch"></section>
+    <section class="movieMatch"></section> -->
 
     
     <!-- <h3><em>(build ajax filtering data/sort for this page)</em></h3> -->
@@ -60,5 +61,4 @@
     <p><a href="create">create new movie</a></p>
 </main>
 
-  <script type="text/javascript" src="../javascripts/movie-genre-search.js"></script>
 <%- include("common-footer.ejs") %> 
